<?xml version="1.0"?>
<package format="3">
    <name>ft_fake_hw</name>
    <description>ros2 control hardware interface for topic_based sim</description>
    <version>0.0.0</version>

    <maintainer email="tpoignonec@unistra.fr">Thibault Poignonec</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>s

    <depend>rclcpp</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>realtime_tools</depend>

    <depend>geometry_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
