<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ft_tools</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="thibault.poignonec@gmail.com">tpoignonec</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_test</buildtool_depend>
  <buildtool_depend>generate_parameter_library</buildtool_depend>

  <depend>ft_msgs</depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_eigen_kdl</depend>
  <depend>kinematics_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
