<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ft_tools_examples</name>
  <version>0.0.1</version>
  <description>Usage examples for ft_tools package.</description>
  <maintainer email="thibault.poignonec@gmail.com">tpoignonec</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ft_tools</depend>
  <depend>ft_msgs</depend>

  <exec_depend>iiwa_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
